Fixed some errors in the UI (DNN Form Pattern) Fixed a bug not showing the correct favicon Fixed an error which occured while retrieving some RSS feeds (e.g. blogs-feed on dotnetnuke.com). Fixed an error with ambiguous NewsId when opening "Manage BBNews".

--- a/Module.css
+++ b/Module.css
@@ -1,1 +1,2 @@
 .dnnBBNewsSettings .dnnFormItem .dnnNumberInput { min-width: 100px;width: 100px!important;}
+.bbNewsCell { padding-bottom: 10px; vertical-align: top;}
